--- a/config_mitie_chi.json
+++ b/config_mitie_chi.json
@@ -1,5 +1,5 @@
 {
-  "pipeline": ["nlp_mitie", "tokenizer_jieba", "ner_jieba_mitie", "ner_synonyms", "intent_classifier_mitie"],
+  "pipeline": ["nlp_mitie", "tokenizer_jieba", "ner_jieba_mitie", "ner_synonyms", "intent_classifier_jieba_mitie"],
   "mitie_file": "./data/total_word_feature_extractor_chi.dat",
   "path" : "./models",
   "data" : "./data/examples/rasa/demo-rasa_chi.json"
