--- a/sample_configs/config_jieba_mitie_sklearn.json
+++ b/sample_configs/config_jieba_mitie_sklearn.json
@@ -10,6 +10,5 @@
   "language": "zh",
   "mitie_file": "./data/total_word_feature_extractor_zh.dat",
   "path" : "./models",
-  "data" : "./data/examples/rasa/demo-rasa_zh.json",
-  "jieba_userdic": "None"
+  "data" : "./data/examples/rasa/demo-rasa_zh.json"
 }
